--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,24 +101,21 @@ body{
 .image-left{
   height: 80%;
   margin: 60px auto;
-	border: solid 5px #FFDDFF;
-	background-image: url(img/guest.png);
+	background-image: url(img/home1.jpg);
 	background-repeat: no-repeat;
 	background-size: contain;
 }
 .image-center{
   height: 80%;
   margin: 60px auto;
-	border: solid 5px #E6FFE9;
-	background-image: url(img/login.png);
+	background-image: url(img/home2.jpg);
 	background-repeat: no-repeat;
 	background-size: contain;
 }
 .image-right{
   height: 80%;
   margin: 60px auto;
-	border: solid 5px #FFDBC9;
-	background-image: url(img/sign_in.png);
+	background-image: url(img/home3.jpg);
 	background-repeat: no-repeat;
 	background-size: contain;
 }
