--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,10 +1,8 @@
 <div class="conteiner-fluid">
   <div class="row m-3 top-row">
-    <div class="col-4 top-link">
+    <div class="col-4">
       <%= link_to members_guest_sign_in_path, method: :post do %>
         <div class="image-left">
-          <h1 class="image-left-text"><b>ゲストログイン</b></h1>
-          <p class="image-left-text-p"></p>
         </div>
       <% end %>
     </div>
