--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -8,13 +8,13 @@
     </div>
     <div class="col-4 top-link">
       <div class="image-center"></div>
-      <%#= link_to member_session_path do %>
-      <%# end %>
+      <%= link_to member_session_path do %>
+      <% end %>
     </div>
     <div class="col-4 top-link">
       <div class="image-right"></div>
-      <%#= link_to new_member_registration_path do %>
-      <%# end %>
+      <%= link_to new_member_registration_path do %>
+      <% end %>
     </div>
   </div>
   <div class="row top-buttom">
