--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -2,18 +2,17 @@
   <div class="row m-3 top-row">
     <div class="col-4">
       <%= link_to members_guest_sign_in_path, method: :post do %>
-        <div class="image-left">
-        </div>
+        <div class="image-left"></div>
       <% end %>
     </div>
-    <div class="col-4 top-link">
-      <div class="image-center"></div>
+    <div class="col-4">
       <%= link_to member_session_path do %>
+      <div class="image-center"></div>
       <% end %>
     </div>
-    <div class="col-4 top-link">
-      <div class="image-right"></div>
+    <div class="col-4">
       <%= link_to new_member_registration_path do %>
+      <div class="image-right"></div>
       <% end %>
     </div>
   </div>
