--- a/app/views/members/program_notifications/index.html.erb
+++ b/app/views/members/program_notifications/index.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div>
         <strong>現在、放送時間の<%= current_member.notification_time %>時間前に通知が来るように設定されています。</strong><br>
-        <p>通知時間の設定を変更する場合は<%= link_to 'こちら', notification_path %>からアクセスしてください</p>
+        <p>通知時間の設定を変更する場合は<b><%= link_to 'こちら', notification_path %></b>からアクセスしてください</p>
       </div>
     </div>
   </div>
