--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
           <%#= link_to "ABOUT", about_path %>
         </li>
         <div class="navbar-brand nav-item text-center" href="#">
-          <%#= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
+          <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
         </div>
         <li class="nav-item">
           <%= link_to "TV PROGRAMS", programs_path %>
@@ -29,7 +29,7 @@
           <%= link_to "MEMBERS", admins_members_path %>
         </li>
         <div class="navbar-brand nav-item text-center" href="#">
-          <%#= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
+          <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
         </div>
         <li class="nav-item">
           <%= link_to "ANALISIS", admins_analysis_path %>
@@ -45,7 +45,7 @@
           <%#= link_to "ABOUT", about_path %>
         </li>
         <div class="navbar-brand nav-item text-center" href="#">
-          <%#= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
+          <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/top' %>
         </div>
         <li class="nav-item">
           <%= link_to "SIGN IN", new_member_registration_path %>
