--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
           <%= link_to "TOP", root_path %>
         </li>
         <li class="nav-item">
-          <%#= link_to "ABOUT", about_path %>
+          <%= link_to "ABOUT", root_path %>
         </li>
         <div class="navbar-brand nav-item text-center" href="#">
           <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/' %>
@@ -42,7 +42,7 @@
           <%= link_to "TOP", root_path %>
         </li>
         <li class="nav-item">
-          <%#= link_to "ABOUT", about_path %>
+          <%= link_to "ABOUT", root_path %>
         </li>
         <div class="navbar-brand nav-item text-center" href="#">
           <%= link_to image_tag('img/logo.png',width: '70%', height: '100%'), '/' %>
